Fix broadcast feature and add owner bypass for daily limits
- Renamed nova_ai_bot.py to main.py
- Added owner bypass: owner can now send unlimited questions
- Fixed LaTeX rendering with proper spacing for square roots and superscripts
- Improved broadcast handler with detailed logging
- Owner can now broadcast without hitting daily limits

--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ ervices:
     name: NOVA-AI-telegram-bot
     env: python
     plan: free
-    startCommand: python nova_ai_bot.py
+    startCommand: python main.py
