Add advertisement system with text and image support
- Added advertisement configuration to .env
- Created send_advertisement() function
- Ads can be text or image based
- Configurable via AD_ENABLED, AD_TYPE, AD_TEXT, AD_IMAGE_FILE_ID
- Advertisements sent after successful AI responses
- Owner bypass: owner has unlimited questions for testing
- Added safety check to prevent #broadcast captions from being processed as questions

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,15 @@ OWNER_USER_ID=your_telegram_user_id_here
 OPENAI_API_KEY=your_openai_api_key_here
 CLAUDE_API_KEY=your_claude_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
+
+# Advertisement Settings (Optional)
+# Set to 'true' to enable ads after AI responses
+AD_ENABLED=false
+# Advertisement type: 'text' or 'image'
+AD_TYPE=text
+# For text ads: Your custom advertisement message
+AD_TEXT=📢 Download Nova Learn App for unlimited access!
+# For image ads: Telegram file_id of your ad image (upload once to bot and get file_id from logs)
+AD_IMAGE_FILE_ID=
+# Caption for image ads
+AD_IMAGE_CAPTION=📢 Check out our latest offers!
